fixed the issues on mobile

--- a/myWebsite/src/components/About/About.scss
+++ b/myWebsite/src/components/About/About.scss
@@ -39,7 +39,7 @@
         }
         .skills{
             @media(max-width:787px){
-                margin-top: -10rem;
+                margin-top: 10rem;
                 font-size: 2rem;
             }
             font-size: 4rem;
