--- a/myWebsite/src/components/Main/main.scss
+++ b/myWebsite/src/components/Main/main.scss
@@ -77,9 +77,9 @@
        width: 30rem;
        border-radius: 1rem;
        @media (max-width: 767px) {
-         width:90%;
-         margin-top: -4rem;
-         margin-left: 1.2rem;
+         width:80%;
+         margin-top: 2rem;
+         margin-left: 5rem;
          justify-content: space-around;
        }
     }
