--- a/myWebsite/src/components/work/Project.scss
+++ b/myWebsite/src/components/work/Project.scss
@@ -19,18 +19,18 @@
     @media(max-width:767px){
       width: 80%;      // display: block;
       flex-direction: column;
-      margin-top: calc(45vh - 80%);
+      margin-top: calc(60vh - 80%);
 
     }
     .imageContainer{
-      flex: 0.5;
-      height: 60%;
+      flex: 0.4;
+      height:60%;
       // width: 70%;
       @media(max-width:767px){
-          width: 100%;    
-          flex: 0.3;
-          max-height: 400px;
-
+          // width: 100%;    
+          flex: 1;
+          height: 55%;
+          
   
       }
       img{
